FIND_PACKAGE(JNI REQUIRED)

#include(FeatureSummary)
#SET (ENABLED_FEATURES "${ENABLED_FEATURES};JNI")
#SET_FEATURE_INFO(JNI "JAVA JNI." "eyyy")

INCLUDE_DIRECTORIES(${JAVA_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${JAVA_INCLUDE_PATH}/linux)

SET(CMAKE_SWIG_FLAGS "")

SWIG_ADD_MODULE(xpn_java java ../xpn.i ${LIBXPN_SOURCES_FULL_PATH})
SWIG_LINK_LIBRARIES(xpn_java ${JAVA_LIBRARIES} ${CMAKE_LINK_LIBRARY_FLAG})

SET_DIRECTORY_PROPERTIES(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${ADDITIONAL_MAKE_CLEAN_FILES};${CMAKE_CURRENT_SOURCE_DIR}/dirent.java;${CMAKE_CURRENT_SOURCE_DIR}/stat.java;${CMAKE_CURRENT_SOURCE_DIR}/SWIGTYPE_p_DIR.java;${CMAKE_CURRENT_SOURCE_DIR}/SWIGTYPE_p_FILE.java;${CMAKE_CURRENT_SOURCE_DIR}/SWIGTYPE_p_void.java;${CMAKE_CURRENT_SOURCE_DIR}/timespec.java;${CMAKE_CURRENT_SOURCE_DIR}/xpn.java;${CMAKE_CURRENT_SOURCE_DIR}/xpnJNI.java")

